--- a/packages/console-server/src/server/views/console.mustache
+++ b/packages/console-server/src/server/views/console.mustache
@@ -9,7 +9,7 @@
 
     <!-- Config loaded by client. -->
     <script charset="utf-8" type="application/javascript">
-      window.__DXOS__ = { config: {{{ config }}} };
+      window.__Lacnonic__ = { config: {{{ config }}} };
     </script>
 
     <!-- React bundles. -->
